--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A new React project.",
   "main": "server/index.js",
   "scripts": {
-    "build": "npm run less && webpack -d",
+    "build": "npm run less && webpack -p",
     "start": "npm run build && node server/index.js",
     "less": "lessc src/css/style.less dist/css/style.css",
     "lint": "eslint .",
-    "test": "npm run build && mocha test/setup.js test/*.spec.js --exit"
+    "test": "mocha test/setup.js test/*.spec.js --exit",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "axios": "^0.16.1",
